<resources>
    <string name="app_name">My Home</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="text_host_or_ip">Host or IP</string>
    <string name="butten_Connect">Connect</string>
    <string name="action_Settings">Settings</string>
    <string name="settings_label">Settings</string>
    <string name="connection_settings">Connection settings</string>
    <string name="host_address_title">Host or IP address</string>
    <string name="host_address_summary">Enter address of PLC.</string>
    <string name="slot_number_title">Slot number</string>
    <string name="slot_number_summary">Enter slot number</string>
    <string name="rack_number_title">Rack number</string>
    <string name="rack_number_summary">Enter rack number</string>
    <string name="connection_type_title">Connection type</string>
    <string name="connection_type_summary">Select type of connection to PLC.</string>
    <string name="button_kitchen">Kitchen</string>
    <string name="button_hall">Hall</string>
    <string name="fab_hall_light_group1_is_switched_on">Hall light group 1 is switched on</string>
    <string name="fab_hall_light_group1_is_switched_off">Hall light group 1 is switched off</string>
    <string name="fab_kitchen_light_group1_is_switched_on">Kitchen light group 1 is switched on</string>
    <string name="fab_kitchen_light_group1_is_switched_off">Kitchen light group 1 is switched off</string>
    <string name="fab_kids_room_light_group1_is_switched_on">Kids room light group 1 is switched on</string>
    <string name="fab_kids_room_light_group_1_is_switched_off">Kids room light group 1 is switched off</string>
    <string name="fab_guest_room_light_group1_is_switched_on">Guest room light group 1 is switched on</string>
    <string name="fab_guest_room_light_group1_is_switched_off">Guest room light group 1 is switched off</string>
    <string name="fab_bedroom_light_group1_is_switched_on">Bedroom light group 1 is switched on</string>
    <string name="fab_bedroom_light_group1_is_switched_off">Bedroom light group 1 is switched off</string>
    <string name="fab_wc_light_is_switched_on">WC light is switched on</string>
    <string name="fab_wc_light_is_switched_off">WC light is switched off</string>
    <string name="fab_bathroom_light_is_switched_on">Bathroom light is switched on</string>
    <string name="fab_bathroom_light_is_switched_off">Bathroom light is switched off</string>
    <string name="fab_connecting">Connecting...</string>
    <string name="fab_system_error">System error!</string>
    <string name="fab_connection_successful">Connection successful!</string>
    <string name="fab_connection_failed">Connection failed!</string>
    <string name="fab_disconnected">Disconnected!</string>
    <string name="bath_room">Bathroom</string>
    <string name="kids_room">Kids room</string>
    <string name="guest_room">Guest room</string>
    <string name="text_wc">WC</string>
    <string name="text_bedroom">Bedroom</string>
    <string name="header_general">General</string>
    <string name="header_advanced">Advanced</string>
    <string name="category_general">category_general</string>
    <string name="category_advanced">category_advanced</string>
    <string name="category_connection_preferences">Connection preferences</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="devs_homepage">Developer\'s homepage</string>
    <string name="Off">Off</string>
    <string name="On">On</string>
    <string name="light_on">Light On</string>
    <string name="light_off">Light Off</string>
    <string name="ventilation">Vent.</string>
    <string name="fab_wc_ventilation_is_switched_on">WC ventillation is switched on</string>
    <string name="fab_wc_ventilation_is_switched_off">WC ventillation is switched off</string>
</resources>
